--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_delete_note">مسح الملاحظة</string>
     <string name="all_notes_deleted_message">تم مسح كل الملاحظات</string>
     <string name="are_you_sure">هل أنت متأكد؟</string>
-    <string name="editor_title_edit_note">محرر الملاحظات</string>
+    <string name="editor_title_edit_note">محرّر الملاحظات</string>
     <string name="editor_title_insert_new_note">ملاحظة جديدة</string>
     <string name="note_edit_text_hint">أدخل ملاحظتك هنا</string>
     <string name="note_icon_content_description">رمز الملاحظة</string>
