--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="note_dummy_text" translatable="false">A dummy text</string>
     <string name="last_edited_text_view">Last edited:</string>
     <string name="dummy_date" translatable="false">yyyy-MM-dd HH:mm:ss</string>
+    <string name="no_notes_msg">There\'s No notes to display.\n Start adding some by pressing \'+\' button below.</string>
 </resources>
