--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,12 @@
     <string name="app_description">A simple &amp; open source note-taking app.</string>
     <string name="app_version_name">Version %1$s</string>
     <string name="view_on_github_button_text">View app code on Github</string>
-    <string name="action_delete_content_description">Delete this note</string>
     <string name="github_repo_url" translatable="false">https://github.com/Abdallah-Abdelazim/MyNotes</string>
     <string name="playstore_url" translatable="false">https://play.google.com/store/apps/details?id=com.aa.mynotes</string>
     <string name="share_app_chooser_dialog_title">Share the app with a friend</string>
     <string name="share_app_fab_content_description">Share the app with a friend</string>
     <string name="share_app_subject">I recommend you to try this great app: %s</string>
-    <string name="share_app_text">"%1$s   %2$s   Install it from: %3$s . "</string>
+    <string name="share_app_text">%1$s: %2$s Install it from: %3$s\n</string>
+    <string name="action_share_note">Share note</string>
+    <string name="share_note_chooser_dialog_title">Share note using</string>
 </resources>
