--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -16,7 +16,7 @@
     <string name="action_about">عن البرنامج</string>
     <string name="app_description">برنامج تدوين ملاحظات بسيط ومفتوح المصدر.</string>
     <string name="title_activity_about">عن برنامج ملاحظاتي</string>
-    <string name="view_on_github_button_text">عرض كود البرنامج على Github</string>
+    <string name="view_on_github_button_text">عرض البرنامج على Github</string>
     <string name="share_app_chooser_dialog_title">مشاركة التطبيق مع صديق</string>
     <string name="share_app_fab_content_description">مشاركة التطبيق مع صديق</string>
     <string name="share_app_subject">أوصيك بتجربة هذا البرنامج الرائع: %s</string>
