Enable more CPU Architectures for the built APKs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="editor_title_edit_note">Note editor</string>
     <string name="note_updated_message">Note updated</string>
     <string name="note_deleted_message">Note deleted</string>
-    <string name="no_notes_to_delete_message">There\'s no notes to delete</string>
+    <string name="no_notes_to_delete_message">There\'re no notes to delete</string>
     <string name="note_dummy_text" translatable="false">A dummy text</string>
     <string name="last_edited_text_view">Last edited:</string>
     <string name="dummy_date" translatable="false">yyyy-MM-dd HH:mm:ss</string>
